fix: Fix align items when scroll page is visible

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,7 +19,7 @@
   left: 0;
   top: 48px;
   transition: all ease 500ms;
-  width: 100vw;
+  width: 100%;
   z-index: 8;
 }
 
@@ -53,7 +53,7 @@
   height: 48px;
   left: 0;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   z-index: 10;
 }
 
