--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -72,7 +72,7 @@ svg.feather {
   height: 48px;
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 10;
 }
 
@@ -119,7 +119,7 @@ svg.feather {
   right: 0;
   top: 48px;
   transition: all ease 500ms;
-  width: 100vw;
+  width: 100%;
   z-index: 9;
 }
 
@@ -172,9 +172,9 @@ svg.feather {
 }
 
 .main-area {
+  max-width: 100%;
   min-height: 100vh;
   padding: 0 8px;
-  max-width: 100vw;
 }
 
 .main-area__container {
